desktop main page done

--- a/app/index.html
+++ b/app/index.html
@@ -227,9 +227,7 @@
 							<div class="product-list-description-wrap">
 								<p class="product-list-name">Christina</p>
 								<p class="product-list-description">
-									Моделируем ситуацию когда админ-уебан решил что
-									маленькое описание = дохуилион слов.
-									И ебемся с выравниванием цен
+									Увлажняющий крем для нормальной кожи
 								</p>
 								<span class="product-list-price">315 грн</span>
 
@@ -341,9 +339,7 @@
 							<div class="product-list-description-wrap">
 								<p class="product-list-name">Christina</p>
 								<p class="product-list-description">
-									Моделируем ситуацию когда админ-уебан решил что
-									маленькое описание = дохуилион слов.
-									И ебемся с выравниванием цен
+									Увлажняющий крем для нормальной кожи
 								</p>
 							</div>
 							<span class="product-list-price">315 грн</span>
