--- a/app/contacts.html
+++ b/app/contacts.html
@@ -13,10 +13,6 @@
 	<header id="header-main">
 		<div class="login-search-row">
 			<div class="header-icon-wrap">
-				<img src="img/placeholder.svg" alt="">
-				<span>Одесса</span>
-			</div>
-			<div class="header-icon-wrap">
 				<img src="img/phone-receiver (1).svg" alt="">
 				<a href="tel:+3800000000" class="header-tel">+3800000000</a>
 			</div>
@@ -33,18 +29,21 @@
 				<a href="#" class="logo">starline</a>
 			</div>
 			<nav class="header-menu-links-wrap">
+				<div class="header-menu-mobile-btn">
+					<span></span>
+				</div>
 				<ul class="header-menu-links">
 					<li>
-						<a href="#">Новости</a>
+						<a href="articles.html">Новости</a>
 					</li>
 					<li>
 						<a href="#">Акции</a>
 					</li>
 					<li>
-						<a href="#">Статьи</a>
+						<a href="articles.html">Статьи</a>
 					</li>
 					<li>
-						<a href="#">Ассортимент</a>
+						<a href="catalog.html">Ассортимент</a>
 						<div class="header-drop-down" style="display: none">
 							<div class="drop-down-el"><a href="#">Уход за телом</a></div>
 							<div class="drop-down-el"><a href="#">Уход за лицом</a></div>
@@ -59,7 +58,7 @@
 						</div>
 					</li>
 					<li>
-					<a href="#">Контакты</a>
+					<a href="contacts.html">Контакты</a>
 				</li>
 				</ul>
 			</nav>
