articles, contacts mobile, cart price fix

--- a/app/main-page.html
+++ b/app/main-page.html
@@ -138,6 +138,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -151,6 +152,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -164,6 +166,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -177,6 +180,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -190,6 +194,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -203,6 +208,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -216,6 +222,7 @@
 						<div class="brand-content">
 							<p class="geometria-heading">JEAN D’ESTREES</p>
 							<p class="geometria-small">Франция</p>
+							<img src="img/brand-img.png" alt="">
 							<p class="brand-description">Одна из ведущих компаний-производителей косметики высокой гаммы для лица и тела, основанная в 50-х годах, представлена более чем в 30-ти странах мира. Продукты на основе компонентов природного растительного, биотехнологического и морского происхождения, включая Био-косметику, прошедшую сертификацию Ecocert, полученные с помощью самых передовых технологий, а также широкий спектр профессиональных высокоэффективных процедур, направленных на решение наиболее часто встречающихся проблем кожи, имеют исключительно нежные и приятные текстуры. Её технические методы базируются на 3-х принципах: мастерство + эффективность + удовольствие.</p>
 							<button class="brand-show-more">Подробнее</button>
 						</div>
@@ -533,8 +540,8 @@
 						<div class="cart-item-info-wrap">
 							<div class="cart-item-info">
 								<p class="name">
-									<a href="#">Lorem ipsum</a>
 									<span class="price">127 грн</span>
+									<a href="#">Lorem ipsum</a>
 								</p>
 								<p class="description">Lorem ipsum is simply dummy text</p>
 							</div>
